--- a/代码回顾-性能优化/解析-组件化开发项目框架设计.md
+++ b/代码回顾-性能优化/解析-组件化开发项目框架设计.md
@@ -2,7 +2,16 @@
 
 > iOS 组件化开发项目框架设计，结合 MVVM 设计模式 + RAC 数据绑定 + Pod 组件管理， 实现一套实战性的iOS组件化框架
 
+
+## 静态库和动态库
+
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190203203917.png)
+
 # iOS从零到一搭建组件化项目架构
+
+
+
 > 随着公司业务需求的不断迭代发展，工程的代码量和业务逻辑也越来越多，原始的开发模式和架构已经无法满足我们的业务发展速度了，这时我们就需要将原始项目进行一次重构大手术了。这时我们应该很清晰这次手术的动刀口在哪，就是之前的高度耦合的业务组件和功能组件，手术的目的就是将这些耦合拆分成互相独立的各个组件。
 
 ## 工程效果预览
