--- a/数据结构算法/解析-算法/解析-常见算法.md
+++ b/数据结构算法/解析-算法/解析-常见算法.md
@@ -154,6 +154,15 @@ OC代码实现
 
 在平均状况下，排序 n 个项目要 Ο(nlogn) 次比较。在最坏状况下则需要 Ο(n2) 次比较，但这种状况并不常见。事实上，快速排序通常明显比其他 Ο(nlogn) 算法更快，因为它的内部循环（inner loop）可以在大部分的架构上很有效率地被实现出来。
 
+## 快速排序相较冒泡排序
+
+* 快速排序之所比较快，因为相比冒泡排序，**每次交换是跳跃式的**。
+* 每次排序的时候设置一个基准点，将小于等于基准点的数全部放到基准点的左边，将大于等于基准点的数全部放到基准点的右边。
+* 这样在每次交换的时候就不会像冒泡排序一样每次只能在相邻的数之间进行交换，交换的距离就大的多了。
+* 因此总的比较和交换次数就少了，速度自然就提高了。
+* 当然在最坏的情况下，仍可能是相邻的两个数进行了交换。
+* 因此快速排序的最差时间复杂度和冒泡排序是一样的都是O(N2)，它的平均时间复杂度为O(NlogN)。
+
 ### 快速排序代码示例
 
 ```objc
