更新KVO和KVC知识点

--- a/iOSCocoa💎/内存管理/内存管理机制.md
+++ b/iOSCocoa💎/内存管理/内存管理机制.md
@@ -103,7 +103,7 @@ int main(int argc, const char * argv[])
 }
 ```
 
-![](http://oc98nass3.bkt.clouddn.com/15326797026134.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15326797026134.jpg)
 
 ### 内存的五大区域
 
@@ -134,7 +134,7 @@ new方法的步骤：
 ```objc
 Person * p = [Person new];
 ```
-![](http://oc98nass3.bkt.clouddn.com/15326788207703.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15326788207703.jpg)
 
 [OC中new方法与alloc+init及构造方法 - CSDN博客](https://blog.csdn.net/xf931456371/article/details/50321357)
 
@@ -219,7 +219,7 @@ Manual Reference Counting
 
 Automatic Reference Counting (ARC) is a compiler feature that provides automatic memory management of Objective-C objects. Rather than having to think about retain and release operations, ARC allows you to concentrate on the interesting code, the object graphs, and the relationships between objects in your application.
 
-![](http://oc98nass3.bkt.clouddn.com/15328167140849.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15328167140849.jpg)
 
 [Transitioning to ARC Release Notes](https://developer.apple.com/library/archive/releasenotes/ObjectiveC/RN-TransitioningToARC/Introduction/Introduction.html)
 
@@ -262,7 +262,7 @@ MRC了解开发常识:
 
 ### AutoReleasePool
 
-![](http://oc98nass3.bkt.clouddn.com/15329344057304.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15329344057304.jpg)
 所有 autorelease 的对象，在出了作用域之后，会被自动添加到最近创建的自动释放池中。
 但是如果每次都放进应用程序的 main.m 中的 autoreleasepool 中，迟早有被撑满的一刻。这个过程中必定有一个释放的动作。何时？
 
@@ -308,11 +308,11 @@ MRC了解开发常识:
 
 然后在采取以下命令跟踪string_weak_的值变化，如下：
 
-![](http://oc98nass3.bkt.clouddn.com/15349184871626.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349184871626.jpg)
 
 再点开enumerateObjectsUsingBlock的执行堆栈信息，看一下：
 
-![](http://oc98nass3.bkt.clouddn.com/15349184786290.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349184786290.jpg)
 
 如果你再debug一下普通的for循环就不会有这些push和pop，既然enumerateObjectsUsingBlock内部有了autoreleasepool，为什么推荐使用它的原因就不多说了。
 
@@ -324,11 +324,11 @@ MRC了解开发常识:
 
 每个Cocoa的线程都会默认标配一个Autorelease Pool，但是你也可以手动创建多个。从前面的操作中，也应该能隐约猜出来了些许，有push和pop操作，意味着每个pool的管理其实是一种类似栈结构的进栈出栈操作，当然pool的管理更复杂些，因为它可以创建多个，还可以嵌套创建删除。这种情况，普通的栈结构是无法满足这种需求的。如下的代码结构：
 
-![](http://oc98nass3.bkt.clouddn.com/15349184981848.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349184981848.jpg)
 
 Pool的创建顺序：Pool 1 ---> Pool 2 ---> Pool 3，drain顺序是Pool 2 ---> Pool 1 --->Pool 3，如果要想实现这种顺序，采取FIFO做不到，普通的栈也不行。如果用链表操作可以做到，因为涉及到链表的首（Pool 2）或尾（Pool 3）插入，应该用双向链表来管理才合适。如下：
 
-![](http://oc98nass3.bkt.clouddn.com/15349185044453.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349185044453.jpg)
 
 有人可能会有疑问，顺序为什么不是1、2、3，我觉得这些问题都不大，上面的顺序Push链表的复杂度为O(n)，Pop的复杂度为O(1)，反过来的话，
 
@@ -340,11 +340,11 @@ Pool的创建顺序：Pool 1 ---> Pool 2 ---> Pool 3，drain顺序是Pool 2 --->
 
 ARC下会对其中的对象会隐式执行autorelease操作，autorelease操作将一个指向对象实例的对象指针添加到PoolPage中。
 
-![](http://oc98nass3.bkt.clouddn.com/15349185114890.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349185114890.jpg)
 
 添加的过程如下：
 
-![](http://oc98nass3.bkt.clouddn.com/15349185174061.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349185174061.jpg)
 
 当当前PoolPage作用域一过，就会对从线程pool中执行pop操作，而pop操作，pop的过程，会遍历page堆栈，对指向的对象一一执行release操作，如果对象的retainCount变为0，即立即释放，如果对象的retaiCount大于0，不释放。当所有对象处理完（出栈完毕），最后完成pop操作。
 
@@ -525,9 +525,9 @@ static NSString * const LMJName = @"iOS开发者公会";
 ## extern
 
 extern可以置于变量或者函数前，以标示变量或者函数的定义在别的文件中，提示编译器遇到此变量和函数时在其他模块中寻找其定义。
-![](http://oc98nass3.bkt.clouddn.com/15340459604030.png)
-![](http://oc98nass3.bkt.clouddn.com/15340459847630.png)
-![](http://oc98nass3.bkt.clouddn.com/15340459989288.png)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15340459604030.png)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15340459847630.png)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15340459989288.png)
 
 * extern修饰的变量，是一个全局变量。只能用来获取全局变量的值, 不能用于定义变量
 * 先在当前文件查找有没有全局变量，没有找到，才会去其他文件查找。
@@ -769,7 +769,7 @@ B->A: strong reference
 @property (nonatomic, weak) id<ClassADelegate> delegate;
 ```
 
-![Delegate模式](http://oc98nass3.bkt.clouddn.com/2017-06-14-14974262077874.jpg)
+![Delegate模式](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/2017-06-14-14974262077874.jpg)
 
 弱引用并未实现对象间的拥有权或职责，并不能使一个对象存活在内存中。如果没有其他对象指向`delegate`代理或者委托对象，那么`delegate`代理将被释放，随之`delegate`代理释放对委托对象的强引用。如果没有其他对象指向委托对象，则委托对象也将被释放。
 
@@ -777,7 +777,7 @@ B->A: strong reference
 
 >块`Block`是类似于C函数的代码块，但除了可执行代码外，它们还可能包含堆栈中的变量。因此，`Block`可以维护一组数据，用于在执行时影响行为。因为`Block`保持代码的执行所需要的数据，他们是非常有用的回调。
 
->官方文档：![](http://oc98nass3.bkt.clouddn.com/2017-06-14-14974270759179.jpg)
+>官方文档：![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/2017-06-14-14974270759179.jpg)
 
 `Block`是`Objective-C`对象，但是有些内存管理规则只适用于`Block`，而非其他`Objective-C`对象。
 
@@ -860,8 +860,92 @@ NSString、NSArray、NSDictionary 等等经常使用copy关键字，是因为他
 block 也经常使用 copy 关键字，具体原因见官方文档：[Objects Use Properties to Keep Track of Blocks：](https://developer.apple.com/library/ios/documentation/Cocoa/Conceptual/ProgrammingWithObjectiveC/WorkingwithBlocks/WorkingwithBlocks.html#//apple_ref/doc/uid/TP40011210-CH8-SW12)
 block 使用 copy 是从 MRC 遗留下来的“传统”,在 MRC 中,方法内部的 block 是在栈区的,使用 copy 可以把它放到堆区.在 ARC 中写不写都行：对于 block 使用 copy 还是 strong 效果是一样的，但写上 copy 也无伤大雅，还能时刻提醒我们：编译器自动对 block 进行了 copy 操作。如果不写 copy ，该类的调用者有可能会忘记或者根本不知道`编译器会自动对 block 进行了 copy 操作`，他们有可能会在调用之前自行拷贝属性值。这种操作多余而低效。你也许会感觉我这种做法有些怪异，不需要写依然写。如果你这样想，其实是你`日用而不知`，
 
-![](http://oc98nass3.bkt.clouddn.com/2017-06-14-14974279552231.jpg)
+![](http://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/2017-06-14-14974279552231.jpg)
 
+
+## dealloc细节
+
+
+* dealloc的调用是在最后一次release执行后，但此时实例变量(ivars)并未释放。
+* 父类的dealloc方法会在子类dealloc方法返回后自动执行。
+* ARC子类的实例变量在根类[NSObject dealloc]中释放。
+
+### NSObject的释放
+
+
+通过runtime源码，很清晰的可以看，NSObject调用dealloc后产生函数调用链如下：
+dealloc --> objc_rootDealloc -->objc_dispose -->objc_destructInstance
+最终调用了一个objc_destructInstance函数，这个函数的定义如下：
+
+
+```objc
+void *objc_destructInstance(id obj) {
+    if (obj) {
+        Class isa_gen = _object_getClass(obj);
+        class_t *isa = newcls(isa_gen);
+
+        // Read all of the flags at once for performance.
+        bool cxx = hasCxxStructors(isa);
+        bool assoc = !UseGC && _class_instancesHaveAssociatedObjects(isa_gen);
+
+        //这里是重点
+        if (cxx) object_cxxDestruct(obj);
+        if (assoc) _object_remove_assocations(obj);
+
+        if (!UseGC) objc_clear_deallocating(obj);
+    }
+
+    return obj;
+}
+
+
+```
+
+在objc_destructInstance函数中，我们可以看到这里面做了三件事情：
+（1）object_cxxDestruct 做一些释放相关的操作
+（2）_object_remove_assocations：移除对象的关联对象，也就是说对象的关联对象是在objc_destructInstance函数中释放的。（具体是如何执行关联对象的释放，后续我们还会讲到）
+（3）objc_clear_deallocating：清空引用计数表和弱引用表，并将所有的weak引用置为nil。（也就是我们的weak引用在dealloc后能够自动置为nil是因为在这里执行了置为nil的操作）
+既然我们清晰的看到这个函数就做了三件事，那对象的成员变量释放一定是在object_cxxDestruct中去做的了。
+
+object_cxxDestruct这个方法的调用最终转化成了.cxx_destruct调用，而且实例变量的而释放是在.cxx_destruct调用的objc_storeStrong中释放的。(探究的过程会附上sunny的研究，感兴趣的同学可以自行实验)
+
+
+也就是dealloc在被调用时，编译器插入了一段代码FinishARCDealloc,继续跟进FinishARCDealloc实现会发现，函数实现的功能是向父类转发dealloc的调用，实现了自动调用[super dealloc]方法。
+至此，我们就清楚了，为什么ARC下我们无需手动调用[super dealloc]，因为编译器为我们做了这个操作，就想自动内存管理做作的一样，由编译器来为我们添加内存管理代码。
+
+
+* [dealloc是如何执行的 - 简书](https://www.jianshu.com/p/eec3fb94b2e6)
+* [ARC下dealloc过程及.cxx_destruct的探究 · sunnyxx的技术博客](http://blog.sunnyxx.com/2014/04/02/objc_dig_arc_dealloc/)
+
+
+#### 关联对象：
+
+针对关联对象我们有以下几点说明：
+
+1、关联对象存在什么地方？
+2、关联对象是如何存储？
+3、对象销毁时候如何处理关联对象呢？
+
+我们可以看到关联对象是由AssociationManager来管理的，同理我们看下AssociationManager定义：
+
+```objc
+class AssociationsManager {
+    static spinlock_t _lock;
+    static AssociationsHashMap *_map;   // associative references:  object pointer -> PtrPtrHashMap.  这行我们看到实际上它里面是维护了一个hashMap表。
+public:
+    AssociationsManager()   { _lock.lock(); }
+    ~AssociationsManager()  { _lock.unlock(); }
+    
+    AssociationsHashMap &associations() {
+        if (_map == NULL)
+            _map = new AssociationsHashMap();
+        return *_map;
+    }
+};
+```
+
+我们可以看到：AssociationsManager里面有一个静态的HashMap，以为是静态变量，所以存储在全局静态存储区，也就是这里的_map是一个全局的map,所有对象的关联对象是存储在一个全局的map中，key则是每个对象的内存地址object pointer。value又是另外一个AssociationsHashMap,里面包含了一个对象所有关联对象的kv对。
+到这：我们的前两个问题就有结果了，关联对象是由AssociationsManager来管理，存储在AssociationsHashMap类型的全局表中。
 
 ## 类的内存管理
 
@@ -979,6 +1063,16 @@ int main(int argc, char * argv[])
 
 注：需要特别说明一下，通过 objc_setAssociatedObject 和 objc_getAssociatedObject方法可以变相地给对象增加成员变量，但由于实现机制不一样，所以并不是真正改变了对象的内存结构。
 
+## 总结
+
+
+### 对象释放
+
+当一个对象释放时，会进行以下三个步骤：
+
+第一步，销毁对象的所有属性及实例变量，
+第二步，移除对象上的所有关联对象；
+第三步，移除所有对该对象的weak引用。
 
 
 ## 参考
