update img and 多线程

--- a/1-iOSCocoa💎/多线程/多线程解析.md
+++ b/1-iOSCocoa💎/多线程/多线程解析.md
@@ -561,6 +561,84 @@ NSOperation和NSOperationQueue是Apple基于GCD封装的一套面向对象的API
 
 ## 多任务分块
 
+### dispatch_group
+
+* dispatch_group 在任务组内的任务都完成的时候通过同步或者异步的方式通知你
+
+* dispatch_group 提供了两种通知方式， dispatch_group_wait 和 dispatch_group_notify 
+
+* dispatch_group_wait 会阻塞当前线程，知道任务都完成时才会继续执行下面的代码
+
+我们可以使用 dispatch_group_wait 这样实现：
+
+
+```objc
+NSArray *urlStrings = @[ @"http://octree.me", @"http://google.com", @"http://github.com" ];
+ 
+dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_HIGH, 0), ^{
+ 
+    dispatch_group_t requestGroup = dispatch_group_create();
+ 
+    for(NSString urlString in urlStrings) {
+    dispatch_group_enter(requestGroup);
+    AFHTTPRequestOperationManager *manager = [AFHTTPRequestOperationManager manager];
+    [manager GET:urlString parameters:nil success:^(AFHTTPRequestOperation *operation, id responseObject) {
+ 
+        NSLog(@"Success");
+        dispatch_group_leave(requestGroup);
+     } failure:^(AFHTTPRequestOperation *operation, NSError *error) {
+ 
+        NSLog(@"Error: %@", error);
+        dispatch_group_leave(requestGroup);
+    }];
+    }
+ 
+    dispatch_group_wait(requestGroup, DISPATCH_TIME_FOREVER);
+    dispatch_async(dispatch_get_main_queue(), ^{
+            //doSomething;
+        });
+}];
+
+```
+
+
+
+* 因为 dispatch_group_wait 会阻塞当前线程，所以我们要把他放到后台执行，避免阻塞主线程。通过 dispatch_group_enter 和 dispatch_group_leave 手动通知任务的开始以及结束。 dispatch_group_wait 会阻塞当前线程，知道所有任务完成或者超时才会继续执行下面的代码。
+
+* 前面我们说过， dispatch_group 提供了两种通知方式，我们已经了解了 dispatch_group_wait ，另一种是 dispath_group_notify ，这种方式相对于前面的显得更为灵活。
+
+dispatch_group_notify 是通过异步的方式通知，所以，不会阻塞线程。于是，我们就可以这样写:
+
+
+```objc
+NSArray *urlStrings = @[ @"http://octree.me", @"http://google.com", @"http://github.com" ];
+ 
+dispatch_group_t requestGroup = dispatch_group_create();
+ 
+for(NSString urlString in urlStrings) {  
+    dispatch_group_enter(requestGroup);
+    AFHTTPRequestOperationManager *manager = [AFHTTPRequestOperationManager manager];
+    [manager GET:urlString parameters:nil success:^(AFHTTPRequestOperation *operation, id responseObject) {
+ 
+        NSLog(@"Success");
+        dispatch_group_leave(requestGroup);
+     } failure:^(AFHTTPRequestOperation *operation, NSError *error) {
+ 
+        NSLog(@"Error: %@", error);
+        dispatch_group_leave(requestGroup);
+    }];
+}
+ 
+dispatch_group_notify(requestGroup, dispatch_get_main_queue(), ^{
+ 
+        //doSomething
+    });
+
+```
+
+
+### dispatch_group_enter
+
 ```objc
 dispatch_group_enter(group)和dispatch_group_leave(group)，这种方式使用更为灵活，enter和leave必须配合使用，有几次enter就要有几次leave
 
