--- a/项目相关/项目-路由跳转.md
+++ b/项目相关/项目-路由跳转.md
@@ -27,4 +27,4 @@ JLRoutes 本质可以理解为：保存一个全局的字典，key 是 URL，val
 
 1. [joeldev/JLRoutes: URL routing library for iOS with a simple block-based API](https://github.com/joeldev/JLRoutes)
 2. [JLRoutes 实现原理分析 - 掘金](https://juejin.im/post/5a7322b56fb9a0635630ea03)
-3. [JLRoutes 路由跳转使用宝典 - 简书](JLRoutes 路由跳转使用宝典 - 简书)
+3. [JLRoutes 路由跳转使用宝典 - 简书](https://www.jianshu.com/p/109425367a90)
