--- a/1-iOSCocoa💎/底层重点知识/解析-事件传递响应链.md
+++ b/1-iOSCocoa💎/底层重点知识/解析-事件传递响应链.md
@@ -20,6 +20,11 @@
 
 * 一次触摸将产生一个UITouch：一个手指离开屏幕前的一系列动作，包含时间戳、所在视图、 力度等信息。
 * UIEvent：多个UITouch组成，也就是多个触摸组成。 一个event指的是第一个手指开始触摸到最后一个手指离开屏幕这段时间所有UITouch的总和。
+    * Touch Events(触摸事件)
+    * Motion Events(运动事件，比如重力感应和摇一摇等)
+    * Remote Events(远程事件，比如用耳机上得按键来控制手机)
+
+
 
 那么这个UIEvent是如何在系统解析出来后，传递下去呢？哪些对象可以传递UIEvent呢？
 
@@ -27,16 +32,23 @@
 
 
 * 发生触摸事件后，系统会将该事件加入到一个由UIApplication管理的事件队列中
-* 注意:这里为什么把时间放到事件的队列当中,而不放到栈当中!
+* 注意: 这里为什么把时间放到事件的队列当中,而不放到栈当中!
 * 因为队列是先进先出,栈是先进后出,先发生的事件当然首先处理,所以把事件放入到队列当中而不放到栈当中
 * UIApplication会从事件队列中取出最前面的事件，并将事件分发下去以便处理，通常，先发送事件给应用程序的主窗口（keyWindow）
 * 主窗口会在视图层次结构中找到一个最合适的视图来处理触摸事件，这也是整个事件处理过程的第一步
 * 找到合适的视图控件后，就会调用视图控件的touches方法来作具体的事件处理
-touchesBegan…
-touchesMoved…
-touchedEnded…
+    * touchesBegan…
+    * touchesMoved…
+    * touchedEnded…
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15342660793892.jpg)
+
+每当手指接触屏幕，操作系统会把事件传递给当前的 App， 在 UIApplication接收到手指的事件之后，就会去调用`UIWindow的hitTest:withEvent:，看看当前点击的点是不是在window内，如果是则继续依次调用其 subView的hitTest:withEvent:方法，直到找到最后需要的view。调用结束并且hit-test view确定之后，便可以确定最合适的 View。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190216144443.png)
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190216144455.png)
+
 
 
 ## 事件响应
