--- a/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
+++ b/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
@@ -24,12 +24,36 @@
 * 例如：函数参数，在函数中生命的对象的指针等。
 * 当系统的栈区大小不够分配时， 系统会提示栈溢出。
 
+
+#### 为什么 Objective-C 不默认使用栈对象呢
+
+
+##### 生命周期固定
+
+Objective-C 变量有效范围是由 “{}” 包含的块来决定的，也就是说栈对象的生命周期仅限于其所在的块里，出了块立马会被释放。一个对象被创建以后有可能会通过方法调用传递到别的方法，当栈对象的创建方法返回时，栈对象会被一起 pop 出栈而释放，导致其没法在别处被继续持有。此时 retain 操作会失效，除非用 copy 方法在想持有该栈对象的地方重新拷贝一份属于自己的栈对象。
+
+##### 空间
+
+现代操作系统的栈和线程绑定，而栈空间是有限的，具体如下：
+
+```objc
+512 KB (secondary threads)
+8 MB (OS X main thread)
+1 MB (iOS main thread)
+```
+
 #### 堆区
 
 * 内存管理由程序控制，
 * 存储的为malloc , new ,alloc出来的对象。
 * 如果程序没有控制释放，那么在程序结束时，由系统释放。但在程序运行过程中，会出现内存泄露、内存溢出问题。
 * 分配方式 类似于链表。
+
+2、缺点
+生命周期固定
+Objective-C 变量有效范围是由 “{}” 包含的块来决定的，也就是说栈对象的生命周期仅限于其所在的块里，出了块立马会被释放。一个对象被创建以后有可能会通过方法调用传递到别的方法，当栈对象的创建方法返回时，栈对象会被一起 pop 出栈而释放，导致其没法在别处被继续持有。此时 retain 操作会失效，除非用 copy 方法在想持有该栈对象的地方重新拷贝一份属于自己的栈对象。
+
+
 
 #### 全局存储区（静态存储区）
 
@@ -1063,6 +1087,61 @@ int main(int argc, char * argv[])
 
 注：需要特别说明一下，通过 objc_setAssociatedObject 和 objc_getAssociatedObject方法可以变相地给对象增加成员变量，但由于实现机制不一样，所以并不是真正改变了对象的内存结构。
 
+## 指针
+
+指针是什么
+
+### 直接引用
+
+在说指针之前，先说一下"直接引用"，即直接通过变量名来读写变量
+
+```objc
+char a;
+a = 10;
+```
+
+在上面的代码中，系统会自动将变量名a的存储内容转换为变量的存储地址，根据地址找到变量a的存储空间，然后再将数据10以2进制的形式放入变量a的存储空间中。
+
+### 间接引用
+
+C语言中还有一种"间接引用"的方式(以变量a为例)：首先将变量a的地址存放在另一个变量中，比如存放在变量b中，然后通过变量b来间接引用变量a，间接读写变量a的值。这就是"间接引用"。
+
+
+```objc
+char a = 10;
+char *b = &a;
+
+//通过b“间接”修改a的值，*b得到地址ffc1的的存储内容
+*b = 20;
+printf("a = %d",a);   //结果：a = 20
+```
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190216190316.png)
+
+**用来存放变量地址的变量，就称为"指针变量"**。在上面的情况下，变量b就是个"指针变量"，我们可以说指针变量b指向变量a。
+
+##  p、*p和&p三者的区别
+
+假设我们定义一个指针p
+那么会经常使用到三个符号： p、*p、 &p;
+
+```objc
+
+int a = 10;   
+int *p = &a;    
+printf("p = %p,*p = %d,&p = %p,a = %d，&a = %p",p,*p,&p,a,&a);
+//结果：p = 0x7ffeeb92e49c,*p = 10,&p = 0x7ffeeb92e490,a = 10，&a = 0x7ffeeb92e49c
+
+```
+
+p是一个指针变量的名字，表示此指针变量指向的内存地址，如果使用%p来输出的话，它将是一个16进制数，从上面的结果可以看到打印p和&a的值是一样
+
+*p表示此指针指向的内存地址中存放的内容，一般是一个和指针类型一致的变量或者常量，从上面的结果可以看到打印*和a的值是一样
+&是取地址运算符，&p就是取指针p的地址；
+
+注意: &p和p的区别在于：**指针p同时也是个变量，既然是变量，编译器肯定要为其分配内存地址，&p就表示编译器为变量p分配的内存地址**；而因为p是一个指针变量，这种特殊的身份注定了它要指向另外一个内存地址，程序员按照程序的需要让它指向一个内存地址，所以p表示它指向的内存地址。
+
+
 ## 总结
 
 
@@ -1100,4 +1179,6 @@ int main(int argc, char * argv[])
 
 ### 类的内存
 
-13. [在内存剖析对象 - iOS - 掘金](https://juejin.im/entry/5922747544d904006cd30fd7)
+1. [在内存剖析对象 - iOS - 掘金](https://juejin.im/entry/5922747544d904006cd30fd7)
+
+2. [iOS 指针的秘密 - 简书](https://www.jianshu.com/p/5b2c7bbc32d6)
