--- a/代码回顾-性能优化/解析-性能优化.md
+++ b/代码回顾-性能优化/解析-性能优化.md
@@ -18,13 +18,13 @@
 
 ## TableView优化
 
-![](http://oc98nass3.bkt.clouddn.com/15349205376557.jpg)
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349205376557.jpg)
 
 
 1.3 减少 cell 内部控件的层级
 我们先来看一下一个带有原贴的转发贴的布局：
 
-![](http://oc98nass3.bkt.clouddn.com/15349205601148.jpg)
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349205601148.jpg)
 
 
 2. 布局
@@ -43,20 +43,20 @@
 
 关于iOS 性能优化梳理： 基本工具、业务优化、内存优化、卡顿优化、布局优化、电量优化、 安装包瘦身、启动优化、网络优化等
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#ios-%E5%AE%98%E6%96%B9%E6%96%87%E6%A1%A3)iOS 官方文档
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#ios-%E5%AE%98%E6%96%B9%E6%96%87%E6%A1%A3)iOS 官方文档
 
 > 专题内容比较多，后面细分内容会有部分重复。
 
 *   [Performance 专题](https://developer.apple.com/library/content/navigation/#section=Topics&topic=Performance)
 *   [Core Animation Programming Guide](https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/CoreAnimation_guide)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#ios-%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96%E7%9B%B8%E5%85%B3%E4%B9%A6%E7%B1%8D)iOS 性能优化相关书籍
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#ios-%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96%E7%9B%B8%E5%85%B3%E4%B9%A6%E7%B1%8D)iOS 性能优化相关书籍
 
 *   [Pro iOS Apps Performance Optimization](http://download.csdn.net/detail/tskyming/9831453)
 *   [High Performance iOS Apps](http://download.csdn.net/detail/tskyming/9831465)
 *   [iOS-Core-Animation-Advanced-Techniques](https://github.com/AttackOnDobby/iOS-Core-Animation-Advanced-Techniques)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#instruments-%E5%B7%A5%E5%85%B7%E7%9B%B8%E5%85%B3)Instruments 工具相关
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#instruments-%E5%B7%A5%E5%85%B7%E7%9B%B8%E5%85%B3)Instruments 工具相关
 
 *   [Instruments User Guide](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/InstrumentsUserGuide/index.html) [中文翻译-PDF](http://cdn.cocimg.com/bbs/attachment/Fid_6/6_24457_90eabb4ed5b3863.pdf)
 *   [Instruments之Leaks学习](http://www.cnblogs.com/lxlx1798/p/6933485.html)
@@ -65,14 +65,14 @@
 *   [Instruments学习之Core Animation学习](http://www.cnblogs.com/lxlx1798/p/6933364.html)
 *   [Instruments之Activity Monitor使用入门](http://www.cnblogs.com/lxlx1798/p/6933141.html)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#gmtc-2018-ppt)GMTC-2018 PPT
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#gmtc-2018-ppt)GMTC-2018 PPT
 
 *   [LinkedIn移动应用的性能优化之道](https://ppt.geekbang.org/slide/show?cid=31&pid=1495)
 *   [美团客户端监控与异常排查实践](https://ppt.geekbang.org/slide/show?cid=31&pid=1500)
 *   [爱奇艺APP极致体验之路](https://ppt.geekbang.org/slide/show?cid=31&pid=1497)
 *   [大前端时代前端监控的最佳实践](https://ppt.geekbang.org/slide/show?cid=31&pid=1496)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BB%BC%E5%90%88%E7%AF%87)综合篇
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BB%BC%E5%90%88%E7%AF%87)综合篇
 
 *   [WWDC2012-235-iOS APP Performance:Responsiveness](https://developer.apple.com/videos/play/wwdc2012/235)
 *   [微信读书iOS性能优化](http://wereadteam.github.io/2016/05/03/WeRead-Performance/)
@@ -84,7 +84,7 @@
 *   [⼿淘iOS性能优化探索](http://pstatic.geekbang.org/pdf/593a53d813cef.pdf?e=1497499485&token=eHNJKRTldoRsUX0uCP9M3icEhpbyh3VF9Nrk5UPM:sa-xp_aIeIhtiWbqR-hY4ImMzFc=)
 *   [iOS App 稳定性指标及监测](https://juejin.im/post/58ca0832a22b9d006418fe43)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%86%85%E5%AD%98%E4%BC%98%E5%8C%96)内存优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%86%85%E5%AD%98%E4%BC%98%E5%8C%96)内存优化
 
 *   [Memory Usage Performance Guidelines](https://developer.apple.com/library/content/documentation/Performance/Conceptual/ManagingMemory/ManagingMemory.html#//apple_ref/doc/uid/10000160i)
 *   [WWDC-2018-416](https://developer.apple.com/videos/play/wwdc2018/416/)[中文翻译](https://juejin.im/post/5b23dafee51d4558e03cbf4f)
@@ -94,7 +94,7 @@
 *   [内存管理及优化(下)-QQ浏览器](https://www.imooc.com/video/11076)
 *   [OOM探究：XNU 内存状态管理](https://www.jianshu.com/p/4458700a8ba8)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%8D%A1%E9%A1%BF%E4%BC%98%E5%8C%96)卡顿优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%8D%A1%E9%A1%BF%E4%BC%98%E5%8C%96)卡顿优化
 
 *   [UIKit性能调优实战讲解](http://www.cocoachina.com/ios/20160208/15238.html?utm_source=tuicool&utm_medium=referral)
 *   [QQ空间掉帧率优化实战](http://wetest.qq.com/lab/view/354.html)
@@ -106,11 +106,11 @@
 *   [iOS监控：卡顿检测](http://ios.jobbole.com/93085/)
 *   [iOS应用UI线程卡顿监控](https://mp.weixin.qq.com/s?__biz=MzI5MjEzNzA1MA==&mid=2650264136&idx=1&sn=052c1db8131d4bed8458b98e1ec0d5b0&chksm=f406837dc3710a6b49e76ce3639f671373b553e8a91b544e82bb8747e9adc7985fea1093a394#rd)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%B8%83%E5%B1%80%E4%BC%98%E5%8C%96)布局优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%B8%83%E5%B1%80%E4%BC%98%E5%8C%96)布局优化
 
 TODO：
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%94%B5%E9%87%8F%E4%BC%98%E5%8C%96)电量优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%94%B5%E9%87%8F%E4%BC%98%E5%8C%96)电量优化
 
 *   [Guide - Energy Efficiency Guide for iOS Apps](https://developer.apple.com/library/content/documentation/Performance/Conceptual/EnergyGuide-iOS/index.html#//apple_ref/doc/uid/TP40015243)
 *   [WWDC2017 - Writing Energy Efficient Apps](https://developer.apple.com/videos/play/wwdc2017/238/)
@@ -120,7 +120,7 @@ TODO：
 *   [iOS电量测试实践](https://mp.weixin.qq.com/s/q39BHIWsbdNeqfH85EOkIQ)
 *   [iOS进阶--App功耗优化看这篇就够了](http://www.cocoachina.com/ios/20171204/21413.html)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%90%AF%E5%8A%A8%E4%BC%98%E5%8C%96)启动优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%90%AF%E5%8A%A8%E4%BC%98%E5%8C%96)启动优化
 
 *   [WWDC2016-406-Optimizing App Startup Time](https://developer.apple.com/videos/play/wwdc2016/406)
 *   [WWDC2017-413-App Startup Time:Past,Present,and Future](https://developer.apple.com/videos/play/wwdc2017/413)
@@ -134,7 +134,7 @@ TODO：
 *   [obj中国-Mach-O 可执行文件](https://objccn.io/issue-6-3/)
 *   [iOS app启动速度研究实践](https://zhuanlan.zhihu.com/p/38183046?from=1086193010&wm=3333_2001&weiboauthoruid=1690182120)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E4%BD%93%E7%A7%AF%E4%BC%98%E5%8C%96)体积优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E4%BD%93%E7%A7%AF%E4%BC%98%E5%8C%96)体积优化
 
 *   [iOS微信安装包瘦身](http://mp.weixin.qq.com/s?__biz=MzAwNDY1ODY2OQ==&mid=207986417&idx=1&sn=77ea7d8e4f8ab7b59111e78c86ccfe66&scene=24&srcid=0921TTAXHGHWKqckEHTvGzoA#rd)
 *   [今日头条IPA安装包的优化](https://techblog.toutiao.com/2016/12/27/iphone/)
@@ -144,7 +144,7 @@ TODO：
 *   [iOS图片优化方案](http://crespoxiao.github.io/2016/11/12/iOS%E5%9B%BE%E7%89%87%E4%BC%98%E5%8C%96%E6%96%B9%E6%A1%88/)
 *   [滴滴出行 iOS 端瘦身实践的 Slides](https://ming1016.github.io/2017/06/12/gmtc-ios-slimming-practice/)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BD%91%E7%BB%9C%E4%BC%98%E5%8C%96)网络优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BD%91%E7%BB%9C%E4%BC%98%E5%8C%96)网络优化
 
 *   [美团点评移动网络优化实践](http://tech.meituan.com/SharkSDK.html)
 *   [开源版HttpDNS方案详解](http://mp.weixin.qq.com/s?__biz=MzAwMDU1MTE1OQ==&mid=209805123&idx=1&sn=ced8d67c3e2cc3ca38ef722949fa21f8)
@@ -154,11 +154,11 @@ TODO：
 *   [蘑菇街高并发多终端无线网关实践](http://www.infoq.com/cn/presentations/mogujie-high-concurrent-multi-terminal-wireless-gateway-practice)
 *   [移动 APP 网络优化概述](http://blog.cnbang.net/tech/3531/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BC%96%E8%AF%91%E4%BC%98%E5%8C%96)编译优化
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BC%96%E8%AF%91%E4%BC%98%E5%8C%96)编译优化
 
 *   [Optimizing-Swift-Build-Times](https://github.com/fastred/Optimizing-Swift-Build-Times)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#apm)APM
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#apm)APM
 
 *   [移动端监控体系之技术原理剖析](http://ios.jobbole.com/92988/)
 *   [网易 - NeteaseAPM iOS SDK技术实现分享](http://mp.weixin.qq.com/s?__biz=MzA3ODg4MDk0Ng==&mid=2651112215&idx=1&sn=9cc5b5fa630542a6d4b7a5626e35217a#rd)
@@ -172,30 +172,30 @@ TODO：
 *   [小试Xcode逆向：app内存监控原理初探](http://ddrccw.github.io/2017/12/30/reverse-xcode-with-lldb-and-hopper-disassembler)
 *   [APMCon-2016演讲实录](http://apmcon.cn/2016/index.html#yjsl)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E8%B0%83%E8%AF%95--crash)调试 & Crash
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E8%B0%83%E8%AF%95--crash)调试 & Crash
 
 *   [iOS 项目开发过程中用到的高级调试技巧，涉及三方库动态调试、静态分析和反编译等领域](https://github.com/aozhimin/iOS-Debug-Hacks)
 *   [Understanding and Analyzing Application Crash Reports](https://developer.apple.com/library/content/technotes/tn2151/_index.html)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%9B%B8%E5%85%B3%E5%BC%80%E6%BA%90%E5%BA%93)相关开源库
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%9B%B8%E5%85%B3%E5%BC%80%E6%BA%90%E5%BA%93)相关开源库
 
-##### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BD%91%E7%BB%9C)网络
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%BD%91%E7%BB%9C)网络
 
 *   [HTTPDNSLib-for-iOS](https://github.com/CNSRE/HTTPDNSLib-for-iOS)
 *   [HTTPDNSLib-for-Andorod](https://github.com/CNSRE/HTTPDNSLib)
 *   [NetworkEye](https://github.com/coderyi/NetworkEye/blob/master/README_Chinese.md)
 
-##### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%8D%A1%E9%A1%BF)卡顿
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E5%8D%A1%E9%A1%BF)卡顿
 
 *   [PerformanceMonitor-Runloop](https://github.com/suifengqjn/PerformanceMonitor)
 *   [GYMonitor-FPS](https://github.com/featuretower/GYMonitor)
 
-##### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%98%A6%E8%BA%AB)瘦身
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#%E7%98%A6%E8%BA%AB)瘦身
 
 *   [LSUnusedResources](https://github.com/tinymind/LSUnusedResources)
 *   [LinkMap](https://github.com/huanxsd/LinkMap)
 
-#### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#apm-1)APM
+### [](https://github.com/skyming/iOS-Performance-Optimization/blob/master/README.md#apm-1)APM
 
 *   [iOS-System-Services](https://github.com/iOS-APM/iOS-System-Services)
 *   [System Monitor](https://github.com/iOS-APM/SystemMonitor)
@@ -208,5 +208,6 @@ TODO：
 
 ## 参考
 
-1. [IM UI性能优化之异步绘制 · 宫城](https://zeeyang.com/2016/07/05/IM-UI-optimize/)
-2. [UITableView 优化：VVeboTableView 源码解析](https://mp.weixin.qq.com/s/4NvUj3lvEb85m8DIrzjoHw)
+1. [skyming/iOS-Performance-Optimization: 关于iOS 性能优化梳理、内存泄露、卡顿、网络、GPU、电量、 App 包体积瘦身、启动速度优化等、Instruments 高级技巧、常见的优化技能- Get — Edit](https://github.com/skyming/iOS-Performance-Optimization)
+2. [IM UI性能优化之异步绘制 · 宫城](https://zeeyang.com/2016/07/05/IM-UI-optimize/)
+3. [UITableView 优化：VVeboTableView 源码解析](https://mp.weixin.qq.com/s/4NvUj3lvEb85m8DIrzjoHw)
