--- a/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
+++ b/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
@@ -176,7 +176,9 @@ int main( int argc, const char * argv[]) {
 }
 ```
 
+#### 实际分配内存
 
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190218195114.png)
 
 ### 引用计数（Reference Counting）
 
