--- a/代码回顾-性能优化/解析-设计六大原则.md
+++ b/代码回顾-性能优化/解析-设计六大原则.md
@@ -1,9 +1,11 @@
 
-
 # 解析-设计六大原则
 
 
 [面向对象设计的六大设计原则（附 Demo & UML类图） - 掘金](https://juejin.im/post/5b9526c1e51d450e69731dc2)
+
+
+推荐阅读：[创建型模式 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/creational.html)
 
 
 ## 原则一：开闭原则（Open Close Principle）
