--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -2,10 +2,30 @@
 
 [iOS-LibraryCollections: iOS常用三方库、三方库、iOS开源项目、插件、知名技术博客、iOS三方库、常用开发工具使用介绍等等，大家可以一次性下载了！](https://gitee.com/Liu0515/iOS-LibraryCollections)
 
-### **QMUI_iOS**
+
+* [iOS开源项目速查表 - Swift开发社区 | CTOLib码库](https://www.ctolib.com/cheatsheets-iOS-ch.html)
+
+## QMUI_iOS
+
+
+比较实用的库
+* 幽灵按钮-QMUIGhostButton：支持设置带有图片的幽灵按钮,图片可以通过枚举类型设置图片在按钮标题的上左下右,支持设置图片和标题的间隔,具体代码如下:
+
+```objc
+self.ghostButton3 = [[QMUIGhostButton alloc] initWithGhostType:QMUIGhostButtonColorGreen];
+self.ghostButton3.titleLabel.font = UIFontMake(14);
+[self.ghostButton3 setTitle:@"点击修改ghostColor" forState:UIControlStateNormal];
+[self.ghostButton3 setImage:UIImageMake(@"icon_emotion") forState:UIControlStateNormal];
+self.ghostButton3.imageEdgeInsets = UIEdgeInsetsMake(0, 6, 0, 0);    //设置图片和标题的间隔
+self.ghostButton3.imagePosition = QMUIButtonImagePositionRight;      //默认为QMUIButtonImagePositionLeft
+self.ghostButton3.adjustsImageWithGhostColor = YES;
+[self.ghostButton3 addTarget:self action:@selector(handleGhostButtonColorEvent) forControlEvents:UIControlEventTouchUpInside];
+[self.view addSubview:self.ghostButton3];
+
+```
+
 
 * [QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
-* [iOS开源项目速查表 - Swift开发社区 | CTOLib码库](https://www.ctolib.com/cheatsheets-iOS-ch.html)
 
 
 ### [**MUKit**](https://github.com/Jeykit/MUKit)
