--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -31,3 +31,50 @@
 
 
 
+
+
+## OC中多参数的方法
+
+当一个方法涉及到不确定多参数的设置和使用时，可以用下面方式
+
+
+```objc
++ (instancetype)qmui_arrayWithObjects:(id)object, ... {
+    void (^addObjectToArrayBlock)(NSMutableArray *array, id obj) = ^void(NSMutableArray *array, id obj) {
+        if ([obj isKindOfClass:[NSArray class]]) {
+            [array addObjectsFromArray:obj];
+        } else {
+            [array addObject:obj];
+        }
+    };
+    
+    NSMutableArray *result = [[NSMutableArray alloc] init];
+    addObjectToArrayBlock(result, object);
+        va_list argumentList; //定义一个 va_list 指针来访问参数表  
+    va_start(argumentList, object);//初始化 va_list，让它指向第一个变参，
+       id argument;
+    while ((argument = va_arg(argumentList, id))) {//调用 va_arg 依次取出 参数，它会自带指向下一个参数  
+        addObjectToArrayBlock(result, argument);
+    }
+    va_end(argumentList);// 收尾，记得关闭关闭 va_list  
+    if ([self isKindOfClass:[NSMutableArray class]]) {
+        return result;
+    }
+    return result.copy;
+}
+
+```
+
+
+（1）首先在函数里定义一具VA_LIST型的变量，这个变量是指向参数的指针；
+（2）然后用VA_START宏初始化刚定义的VA_LIST变量；
+（3）然后用VA_ARG返回可变的参数，VA_ARG的第二个参数是你要返回的参数的类型（如果函数有多个可变参数的，依次调用VA_ARG获取各个参数）；
+（4）最后用VA_END宏结束可变参数的获取。
+注意：
+
+（1）可变参数的类型和个数完全由程序代码控制,它并不能智能地识别不同参数的个数和类型；
+（2）如果我们不需要一一详解每个参数，只需要将可变列表拷贝至某个缓冲，可用vsprintf函数；
+（3）因为编译器对可变参数的函数的原型检查不够严格,对编程查错不利.不利于我们写出高质量的代码；
+
+
+[iOS自定义多参数类型方法 - 王小航 - 博客园](https://www.cnblogs.com/wanghang/p/6298878.html)
