--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -78,3 +78,21 @@
 
 
 [iOS自定义多参数类型方法 - 王小航 - 博客园](https://www.cnblogs.com/wanghang/p/6298878.html)
+
+
+
+
+## 多个对象执行方法
+
+```objc
+
+/**
+ 移除当前所有 subviews
+ */
+- (void)qmui_removeAllSubviews;
+
+- (void)qmui_removeAllSubviews {
+    [self.subviews makeObjectsPerformSelector:@selector(removeFromSuperview)];
+}
+
+```
