--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -31,7 +31,12 @@ self.ghostButton3.adjustsImageWithGhostColor = YES;
 ### [**MUKit**](https://github.com/Jeykit/MUKit)
 
 1. MUPopupView
-2. UIScrollView嵌套滚动的
+2. UIScrollView嵌套滚动
+3. 相册
+    1. QMUIAssetsManager
+    2. QMUIAlbumViewController
+
+
 
 # UI
 
