--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -7,6 +7,7 @@
 
 ## QMUI_iOS
 
+[QMUIDemo_iOS](https://github.com/QMUI/QMUIDemo_iOS)
 
 比较实用的库
 * 幽灵按钮-QMUIGhostButton：支持设置带有图片的幽灵按钮,图片可以通过枚举类型设置图片在按钮标题的上左下右,支持设置图片和标题的间隔,具体代码如下:
