--- a/项目相关/项目心得.md
+++ b/项目相关/项目心得.md
@@ -96,3 +96,44 @@
 }
 
 ```
+
+
+## UITableCell展开，刷新闪烁
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190227113730.png)
+
+**注意cell的subview如果加在cell的contentView上会有闪烁**。
+
+```objc
+[tableView beginUpdates];
+[tableView reloadRowsAtIndexPaths:@[indexPath] withRowAnimation:UITableViewRowAnimationNone];
+[tableView endUpdates];
+```
+
+cell刷新会调`layoutSubviews`，这里如果再去调用`setNeedsLayout` ==> 再次调`layoutSubviews`,相当于调用了2次布局
+
+
+```objc
+- (void)setCommentsModel:(CommentsModel *)commentsModel{
+    //添加点赞情况
+    if (_commentsModel != commentsModel) {
+        _commentsModel = commentsModel;
+    }
+    /** update cell */
+ [self setNeedsLayout];
+}
+```
+
+所以应该更新逻辑放在model变化时的里面调用
+
+```objc
+- (void)setCommentsModel:(CommentsModel *)commentsModel{
+    //添加点赞情况
+    if (_commentsModel != commentsModel) {
+        _commentsModel = commentsModel;
+     /** update cell */
+     [self setNeedsLayout];
+
+    }
+}
+```
