--- a/项目相关/项目-问题回顾.md
+++ b/项目相关/项目-问题回顾.md
@@ -751,7 +751,7 @@ NSUInteger characterIndex = [layoutManager characterIndexForPoint:tapLocation
 
 ##  convertImageToGreyScale
 
-```
+```objc
 //- (UIImage*) convertImageToGreyScale:(UIImage*) loadImage
 //    CIImage *image = [[CIImage alloc] initWithImage:loadImage]; //将图片转换为CIImage
 //
