--- a/代码回顾-性能优化/解析-性能优化.md
+++ b/代码回顾-性能优化/解析-性能优化.md
@@ -15,6 +15,13 @@
 我们将使用`YYAsyncLayer`组件实现异步绘制
 
 
+
+## 性能检测
+
+
+[aozhimin/iOS-Monitor-Platform: iOS 性能监控 SDK —— Wedjat（华狄特）开发过程的调研和整理](https://github.com/aozhimin/iOS-Monitor-Platform)
+
+
 ## TableView优化
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15349205376557.jpg)
