--- a/代码回顾-性能优化/解析-组件化开发项目框架设计.md
+++ b/代码回顾-性能优化/解析-组件化开发项目框架设计.md
@@ -2,6 +2,14 @@
 
 > iOS 组件化开发项目框架设计，结合 MVVM 设计模式 + RAC 数据绑定 + Pod 组件管理， 实现一套实战性的iOS组件化框架
 
+[iOS 组件化方案探索 | WeRead团队博客](https://wereadteam.github.io/2016/03/19/iOS-Component/)
+[iOS组件化实践(一)：简介 - 简书](https://www.jianshu.com/p/568e875abd48)
+[iOS组件化实践(三)：实施 - 简书](https://www.jianshu.com/p/0a7f3c0b4194)
+
+## 参考组件库
+
+[wangshiyu13/Lothar: 基于CTMediator的组件化中间件](https://github.com/wangshiyu13/Lothar)
+
 
 ## 静态库和动态库
 
