创建 架构搭建

--- a/1-iOSCocoa💎/底层重点知识/解析-事件传递响应链.md
+++ b/1-iOSCocoa💎/底层重点知识/解析-事件传递响应链.md
@@ -24,12 +24,9 @@
     * Motion Events(运动事件，比如重力感应和摇一摇等)
     * Remote Events(远程事件，比如用耳机上得按键来控制手机)
 
-
-
 那么这个UIEvent是如何在系统解析出来后，传递下去呢？哪些对象可以传递UIEvent呢？
 
 ## 事件的分发传递
-
 
 * 发生触摸事件后，系统会将该事件加入到一个由UIApplication管理的事件队列中
 * 注意: 这里为什么把时间放到事件的队列当中,而不放到栈当中!
@@ -43,12 +40,11 @@
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/qiniu/15342660793892.jpg)
 
-每当手指接触屏幕，操作系统会把事件传递给当前的 App， 在 UIApplication接收到手指的事件之后，就会去调用`UIWindow的hitTest:withEvent:，看看当前点击的点是不是在window内，如果是则继续依次调用其 subView的hitTest:withEvent:方法，直到找到最后需要的view。调用结束并且hit-test view确定之后，便可以确定最合适的 View。
+每当手指接触屏幕，操作系统会把事件传递给当前的 App， 在 UIApplication接收到手指的事件之后，就会去调用`UIWindow`的`hitTest:withEvent:`，看看当前点击的点是不是在window内，如果是则继续依次调用其 subView的hitTest:withEvent:方法，直到找到最后需要的view。调用结束并且hit-test view确定之后，便可以确定最合适的 View。
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190216144443.png)
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190216144455.png)
-
 
 
 ## 事件响应
@@ -60,9 +56,7 @@
 正好存在着这么一个方法：- (nullable UIResponder *)nextResponder，通过方法名我们不难发现这是获取当前view的下一个响应者，那么我们重写touchesBegan方法，逐级获取下一响应者，直到没有下一个响应者位置。相关代码如下：
 
 ```objc
-- (void)touchesBegan:(NSSet<UITouch *. *)touches withEvent:(UIEvent *)event
-
-{
+- (void)touchesBegan:(NSSet<UITouch *. *)touches withEvent:(UIEvent *)event{
 
     UIResponder * next = [self nextResponder];
 
@@ -77,7 +71,6 @@
         next = [next nextResponder];
 
     }   
-
 }
 
 ```
